<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileFly</string>
    <string name="title_section1">Send</string>
    <string name="title_section2">Received Files</string>
    <string name="action_about">About</string>
    <string name="action_howtouse">How to Use</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="choose_file">Choose File</string>
    <string name="no_files_title">No Files Available</string>
    <string name="no_files_text">Download files directly into the FileFly folder on the SD Card for them to be available.</string>
    <string name="send">Send</string>
    <string name="no_file">&lt;No File Chosen&gt;</string>
    <string name="turn_on_nfc">Turn on NFC</string>
    <string name="goto_settings">Go to Settings to turn on NFC. Check under Wireless &amp; Network Settings.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="nfc_unavailable">NFC is unavailable</string>
    <string name="no_nfc">This app requires NFC to use.</string>
    <string name="ok">OK</string>
    <string name="howtouse_paragraph">
        This app requires files to be placed in the FileFly folder
        on the SD Card to be able to send them. Received files can
        be found in the FileFly/received folder on the SD Card.
        To send a file, enter your first and last name, click
        "Choose File", select from the list of available files,
        and then click "Send" before touching smartphones together.
        To receive a file, open the "Beam Complete" notification
        and select FileFly from the menu.
        </string>
    <string name="about_paragraph">
        This application and its source code are licensed under
        the Apache License v2 and contains other projects under
        the same license.  The Apache Commons IO library version
        2.4 is used in this software. The source code and license
        are available for download online at http://github.com/askii99/FileFly.
        Copyright 2014 Jacob Abramson, Andy Kakkaramadam,
        Peter Piech, and Saurabh Sharma.
        </string>

</resources>