<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/first_name"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
        	android:id="@+id/input_fname"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:ems="15"
        	android:inputType="textPersonName|textCapWords" >

    	</EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/last_name"
        	android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
        	android:id="@+id/input_lname"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:ems="15"
        	android:inputType="textPersonName|textCapWords" >

    	</EditText>
        
    </LinearLayout>    
	
    
    <!-- 
     * Put choose file and send buttons on same line with each button taking half the screen.
     * Put name of file below these buttons, centered
     * 
     * @author Jacob Abramson 10/17/14
     * 
     -->
    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:stretchColumns="1" >
        
        <TableRow>
    
		    <Button
		        android:id="@+id/choose_file"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/choose_file"
		        android:layout_weight="1" />
		
		    <Button
		        android:id="@+id/send_file"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/send"
		        android:layout_weight="1" />
		    
		</TableRow>
		
	</TableLayout>
    
    <TextView
                android:id="@+id/selected_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_file"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1" />
    
    
</LinearLayout>